# service/docs/swagger.json
@@ -37,7 +37,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entityComment.Comment"
+                            "$ref": "#/definitions/dtoComment.CommentRequest"
                         }
                     }
                 ],
@@ -265,7 +265,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entityComment.Comment"
+                            "$ref": "#/definitions/dtoComment.CommentRequest"
                         }
                     },
                     {
@@ -332,7 +332,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entityPhoto.Photo"
+                            "$ref": "#/definitions/dtoPhoto.PhotoRequest"
                         }
                     }
                 ],
@@ -392,7 +392,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entityPhoto.Photo"
+                            "$ref": "#/definitions/dtoPhoto.PhotoRequest"
                         }
                     },
                     {
@@ -545,7 +545,7 @@
             }
         },
         "/photo/updatePhoto/{id}": {
-            "post": {
+            "put": {
                 "security": [
                     {
                         "BearerAuth": []
@@ -569,7 +569,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entityPhoto.Photo"
+                            "$ref": "#/definitions/dtoPhoto.PhotoRequest"
                         }
                     },
                     {
@@ -636,7 +636,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entitySosmed.SosialMedia"
+                            "$ref": "#/definitions/dtoSosmed.SosmedRequest"
                         }
                     }
                 ],
@@ -813,7 +813,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/entitySosmed.SosialMedia"
+                            "$ref": "#/definitions/dtoSosmed.SosmedRequest"
                         }
                     }
                 ],
@@ -1078,9 +1078,6 @@
                 "email": {
                     "type": "string"
                 },
-                "id": {
-                    "type": "integer"
-                },
                 "password": {
                     "type": "string",
                     "minLength": 6
@@ -1107,6 +1104,25 @@
                 }
             }
         },
+        "dtoComment.CommentRequest": {
+            "type": "object",
+            "required": [
+                "message",
+                "photo_id",
+                "user_id"
+            ],
+            "properties": {
+                "message": {
+                    "type": "string"
+                },
+                "photo_id": {
+                    "type": "integer"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "dtoComment.CommentResponse": {
             "type": "object",
             "properties": {
@@ -1130,6 +1146,29 @@
                 },
                 "user": {
                     "$ref": "#/definitions/entityUser.User"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dtoPhoto.PhotoRequest": {
+            "type": "object",
+            "required": [
+                "caption",
+                "photo_url",
+                "title",
+                "user_id"
+            ],
+            "properties": {
+                "caption": {
+                    "type": "string"
+                },
+                "photo_url": {
+                    "type": "string"
+                },
+                "title": {
+                    "type": "string"
                 },
                 "user_id": {
                     "type": "integer"
@@ -1171,6 +1210,25 @@
                 }
             }
         },
+        "dtoSosmed.SosmedRequest": {
+            "type": "object",
+            "required": [
+                "name",
+                "sosial_media_url",
+                "user_id"
+            ],
+            "properties": {
+                "name": {
+                    "type": "string"
+                },
+                "sosial_media_url": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "integer"
+                }
+            }
+        },
         "dtoSosmed.SosmedResposnse": {
             "type": "object",
             "properties": {
@@ -1191,34 +1249,6 @@
                 },
                 "user": {
                     "$ref": "#/definitions/entityUser.User"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "entityComment.Comment": {
-            "type": "object",
-            "required": [
-                "message",
-                "photo_id",
-                "user_id"
-            ],
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "photo_id": {
-                    "type": "integer"
-                },
-                "updated_at": {
-                    "type": "string"
                 },
                 "user_id": {
                     "type": "integer"
@@ -1247,34 +1277,6 @@
                     "type": "string"
                 },
                 "title": {
-                    "type": "string"
-                },
-                "updated_at": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "integer"
-                }
-            }
-        },
-        "entitySosmed.SosialMedia": {
-            "type": "object",
-            "required": [
-                "name",
-                "sosial_media_url",
-                "user_id"
-            ],
-            "properties": {
-                "created_at": {
-                    "type": "string"
-                },
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "sosial_media_url": {
                     "type": "string"
                 },
                 "updated_at": {
